--- a/styles/style.css
+++ b/styles/style.css
@@ -18,23 +18,14 @@ h1 {
   line-height: 45px;
   text-align: center;
   margin: auto;
-  font-family: prestige-elite-std, monospace;
+  font-family: "Druk Wide Bold";
   /* font-style: normal; */
-}
-
-h6 {
-  font-family: prestige-elite-std, monospace;
-  color: grey;
-  /* font-weight: 400; */
-  font-size: 18px;
-  font-style: normal;
-  text-align: center;
 }
 
 a {
   margin: auto;
   /* display: block; */
-  font-family: prestige-elite-std, monospace;
+  font-family: "IBM Plex Mono", monospace;
   font-weight: 400;
   font-style: normal;
   font-size: 14px;
@@ -44,7 +35,7 @@ a {
 }
 
 b {
-  font-weight: 10000;
+  font-weight: bold;
 }
 
 footer {
@@ -197,13 +188,18 @@ button span {
     flex-basis: 20%;
     align-self: flex-start;
     min-width: 260px;
+    text-align: left;
     /* background-color: red; */
     /* animation: fadeImg 0.8s; */
   }
   .heading {
-    /* margin: auto; */
-    text-align: center;
+    text-align: left;
     padding-top: 17px;
+  }
+
+  h1 {
+    text-align: left;
+    padding-left: 0.2rem;
   }
 
   .col-2 {
@@ -212,8 +208,14 @@ button span {
     width: 70%;
   }
 
+  .about-page .col-2 {
+    width: 100%;
+  }
+
   .col-2 p {
-    text-align: center;
+    text-align: left;
+    font-size: 2.6rem;
+    line-height: 2.35rem;
   }
 
   img:hover {
@@ -224,29 +226,23 @@ button span {
 
   } */
 
-  h6 {
-    /* font-family: prestige-elite-std, monospace;
-    font-weight: 400;
-    font-size: 18px;
-    font-style: normal;
-    */
-    text-align: center;
-  }
-
   a {
     display: block;
     font-size: 0.8rem;
     /* line-height: px; */
+    font-family: "IBM Plex Mono", monospace;
   }
   .menu a {
     text-align: left;
-    letter-spacing: 0.3rem;
+    letter-spacing: 0.27rem;
     line-height: 3rem;
+    font-size: 0.8rem;
   }
   p {
-    font-family: prestige-elite-std, monospace;
+    font-family: "IBM Plex Mono", monospace;
     font-weight: 400;
     font-style: normal;
+    color: grey;
   }
 
   footer {
@@ -282,4 +278,74 @@ button span {
       opacity: 0;
     }
   }
+}
+
+p {
+  font-family: prestige-elite-std, monospace;
+  font-weight: 400;
+  font-style: normal;
+  margin: auto;
+}
+
+footer {
+  display: inline-block;
+  /* margin: auto; */
+}
+
+.about-text {
+  font-family: "Cooper BT";
+  text-align: left;
+  color: white;
+}
+
+.about-text p {
+  font-family: "Cooper BT";
+  text-align: left;
+  color: white;
+}
+
+#name {
+  /* text-decoration: underline red; */
+}
+
+#photographer {
+  text-decoration: underline red;
+
+  /* font-size: 80px; */
+}
+#journalist {
+  /* font-size: 80px; */
+  text-decoration: underline red;
+}
+
+.about-page {
+  background-color: #ffe673;
+}
+@import url("https://fonts.googleapis.com/css?family=Lato:100");
+
+.about-page {
+  animation: changeBackgroundColor 7s infinite;
+}
+
+@keyframes changeBackgroundColor {
+  0% {
+    background-color: #001f3f;
+  }
+  50% {
+    background-color: #ff4136;
+  }
+  100% {
+    background-color: #001f3f;
+  }
+}
+.cu {
+  font-family: "WeddingTextW01";
+  color: white;
+  padding: 40px;
+}
+
+.signature {
+  padding-left: 50px;
+  font-family: "Cooper BT";
+  color: white;
 }
